finished some controllers